AC_INIT([libmusic], [1.0.0], [libmusic@dataandsignal.com, bugs: https://github.com/spinlockirqsave/libmusic/issues], [libmusic], [dataandsignal.com])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign])
AC_PROG_CC

AM_PROG_AR
LT_INIT

AC_CANONICAL_HOST

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
